// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`query.joke should match default snapshot 1`] = `
Object {
  "data": Object {
    "jokeByCategory": Object {
      "categories": Array [],
      "id": "2000",
      "text": "Chuck Norris can write to an output stream.",
    },
  },
  "errors": undefined,
}
`;

exports[`query.joke should match nerdy snapshot 1`] = `
Object {
  "data": Object {
    "jokeByCategory": Object {
      "categories": Array [
        "NERDY",
      ],
      "id": "1000",
      "text": "Mock Chuck Norris's database has only one table, 'Kick', which he DROPs frequently.",
    },
  },
  "errors": undefined,
}
`;
